# wlax_all_american

./: README.md  clean.py  cleaning_report.txt  final_cleaning.py  merge.py  parse.py  parse_2.py  parse_3.py  pyproject.toml  scrape.py  scrape_2.py  scrape_3.py  unique_values.txt  value_check.py
cleaned/: all_american_2015_D1.json  all_american_2015_D2.json  all_american_2015_D3.json  all_american_2016_D1.json  all_american_2016_D2.json  all_american_2016_D3.json  all_american_2017_D1.json  all_american_2017_D2.json  all_american_2017_D3.json  all_american_2018_D1.json  all_american_2018_D2.json  all_american_2018_D3.json  all_american_2019_D1.json  all_american_2019_D2.json  all_american_2019_D3.json  all_american_2021_D1.json  all_american_2021_D2.json  all_american_2021_D3.json  all_american_2022_D1.json  all_american_2022_D2.json  all_american_2022_D3.json  all_american_2023_D1.json  all_american_2023_D2.json  all_american_2023_D3.json  all_american_2024_D1.json  all_american_2024_D2.json  all_american_2024_D3.json
csv/: all_american_schools.txt  check_schools.py  comparison_results.txt  school_mapping.csv
final/: all_american_2015.json  all_american_2016.json  all_american_2017.json  all_american_2018.json  all_american_2019.json  all_american_2021.json  all_american_2022.json  all_american_2023.json  all_american_2024.json
merged/: all_american_2015.json  all_american_2016.json  all_american_2017.json  all_american_2018.json  all_american_2019.json  all_american_2021.json  all_american_2022.json  all_american_2023.json  all_american_2024.json
parsed/: all_american_2015_D1.json  all_american_2015_D2.json  all_american_2015_D3.json  all_american_2016_D1.json  all_american_2016_D2.json  all_american_2016_D3.json  all_american_2017_D1.json  all_american_2017_D2.json  all_american_2017_D3.json  all_american_2018_D1.json  all_american_2018_D2.json  all_american_2018_D3.json  all_american_2019_D1.json  all_american_2019_D2.json  all_american_2019_D3.json  all_american_2021_D1.json  all_american_2021_D2.json  all_american_2021_D3.json  all_american_2022_D1.json  all_american_2022_D2.json  all_american_2022_D3.json  all_american_2023_D1.json  all_american_2023_D2.json  all_american_2023_D3.json  all_american_2024_D1.json  all_american_2024_D2.json  all_american_2024_D3.json
raw/: all_american_2017_D1.json  all_american_2017_D2.json  all_american_2017_D3.json  all_american_2018_D1.json  all_american_2018_D2.json  all_american_2018_D3.json  all_american_2019_D1.json  all_american_2019_D2.json  all_american_2019_D3.json  all_american_2021_D1.json  all_american_2021_D2.json  all_american_2021_D3.json  all_american_2022_D1.json  all_american_2022_D2.json  all_american_2022_D3.json  all_american_2023_D1.json  (+5 more)
(+6 files in other folders)
