[tool.poetry]
package-mode = false
name = "goalbound-scrape"
version = "0.1.0"
description = "Scrape, parse, and clean data for Goalbound"
authors = ["Jack Watters <johnwatt@usc.edu>"]
readme = "README.md"
packages = [{ include = "logic" }]

[tool.poetry.dependencies]
python = "^3.13"
aiofiles = "^24.1.0"
aiohttp = "^3.11.10"
aiosignal = "^1.3.2"
annotated-types = "^0.7.0"
anyio = "^4.7.0"
appnope = "^0.1.4"
async-timeout = "^5.0.1"
attrs = "^24.3.0"
backcall = "^0.2.0"
beautifulsoup4 = "^4.12.3"
blobfile = "^3.0.0"
brotli = "^1.1.0"
bs4 = "^0.0.2"
certifi = "^2024.12.14"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
comm = "^0.2.2"
contourpy = "^1.3.1"
cycler = "^0.12.1"
dataclasses-json = "^0.6.7"
debugpy = "^1.8.11"
decorator = "^5.1.1"
distro = "^1.9.0"
docopt = "^0.6.2"
duckduckgo-search = "^6.3.7"
entrypoints = "^0.4"
executing = "^2.1.0"
filelock = "^3.16.1"
fonttools = "^4.55.3"
frozenlist = "^1.5.0"
fsspec = "^2024.10.0"
google-search-results = "^2.4.2"
h11 = "^0.14.0"
h2 = "^4.1.0"
hpack = "^4.0.0"
httpcore = "^1.0.7"
httpx = "^0.28.1"
huggingface-hub = "^0.27.0"
hyperframe = "^6.0.1"
idna = "^3.10"
ipykernel = "^6.29.5"
ipython = "^8.30.0"
jedi = "^0.19.2"
joblib = "^1.4.2"
jsonpatch = "^1.33"
jsonpointer = "^3.0.0"
jupyter-client = "^8.6.3"
jupyter-core = "^5.7.2"
kiwisolver = "^1.4.7"
langchain = "^0.3.12"
langsmith = "^0.2.3"
lxml = "^5.3.0"
marshmallow = "^3.23.1"
matplotlib = "^3.10.0"
matplotlib-inline = "^0.1.7"
multidict = "^6.1.0"
mypy-extensions = "^1.0.0"
nest-asyncio = "^1.6.0"
numpy = "^2.2.0"
openai = "^1.58.1"
packaging = "^24.2"
pandas = "^2.2.3"
parso = "^0.8.4"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
pillow = "^11.0.0"
platformdirs = "^4.3.6"
plotly = "^5.24.1"
prompt-toolkit = "^3.0.48"
psutil = "^6.1.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pycryptodomex = "^3.21.0"
pydantic = "^2.10.3"
pydantic-core = "^2.27.1"
pygments = "^2.18.0"
pyparsing = "^3.2.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
pyyaml = "^6.0.2"
pyzmq = "^26.2.0"
regex = "^2024.11.6"
requests = "^2.32.3"
safetensors = "^0.4.5"
scikit-learn = "^1.6.0"
scipy = "^1.14.1"
six = "^1.17.0"
sniffio = "^1.3.1"
socksio = "^1.0.0"
soupsieve = "^2.6"
sqlalchemy = "^2.0.36"
stack-data = "^0.6.3"
tavily-python = "^0.5.0"
tenacity = "^9.0.0"
threadpoolctl = "^3.5.0"
tiktoken = "^0.8.0"
tokenizers = "^0.21.0"
tornado = "^6.4.2"
tqdm = "^4.67.1"
traitlets = "^5.14.3"
transformers = "^4.47.1"
typing-inspect = "^0.9.0"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
wcwidth = "^0.2.13"
yarl = "^1.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
